fixxed chord bass note in dark mode

--- a/resources/assets/sass/dark.scss
+++ b/resources/assets/sass/dark.scss
@@ -63,6 +63,10 @@ body.dark {
     color: #4dc0b5;
   }
 
+  .chord-bass {
+    color: #45a99f;
+  }
+
   .chosen .btn,
   .btn.chosen,
   .dark-mode-button {
